<resources>
    <string name="app_name">M-Expense</string>
    <string name="trip">Trip</string>
    <string name="expense">Expense</string>
    <string name="clear">Clear</string>
    <string name="export">Export</string>
    <string name="log_out">Log out</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="function">Functions in development</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
</resources>